Fix control button width on small screens

--- a/fall-2025/src/assets/styles/controls.css
+++ b/fall-2025/src/assets/styles/controls.css
@@ -60,7 +60,7 @@
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
     min-height: 44px;
     white-space: nowrap;
-    width: 44px;
+    /* width: 44px; */
     height: 44px;
 }
 
